AVI | DESC | FAVI

--- a/simple.html
+++ b/simple.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Example Name</title></head>
-    <body>
-    <h1>Test Header</h1>
-    <p>Test <b>paragraph</b> <i>element</i></p><br>
-    <p>Test page:<br>
-    break</p>
-    <a href="http://google.com/" target="_blank">Test link</a><br><br>
-    <img src="https://media3.giphy.com/media/jWnrMDbEuwERB1NQhY/giphy.gif">
+<head>
+	<link rel="icon" href="https://i.imgur.com/i3XS5oj.png">
+	<title>HUNYBEE</title>
+</head>
+<body>
+
+	<!-- header element -->
+	<header>
+		<center>
+			<img src="https://ak5.picdn.net/shutterstock/videos/1005610945/thumb/1.jpg">
+		</center>
+	</header>
+	<!-- main element -->
+	<main>
+		<center>
+			<p>A honey bee (also spelled honeybee) is a eusocial flying insect within the genus Apis of the bee clade. 
+				<br> 
+			They are known for construction of perennial, colonial nests from wax, for the large size of their colonies, and for their surplus production and storage of honey.</p>
+		</center></main>
+
 </body>
 </html>
