--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/clean.css">
 	<link rel="icon" href="https://i.imgur.com/i3XS5oj.png">
 	<title>HUNYBEE</title>
 </head>
@@ -8,17 +9,17 @@
 
 	<!-- header element -->
 	<header>
-		<center>
-			<img src="https://ak5.picdn.net/shutterstock/videos/1005610945/thumb/1.jpg">
-		</center>
+		
+		<img src="https://ak5.picdn.net/shutterstock/videos/1005610945/thumb/1.jpg">
+		
 	</header>
 	<!-- main element -->
 	<main>
-		<center>
-			<p>A honey bee (also spelled honeybee) is a eusocial flying insect within the genus Apis of the bee clade. 
+		
+		<p>A honey bee (also spelled honeybee) is a eusocial flying insect within the genus Apis of the bee clade. 
 				<br> 
-			They are known for construction of perennial, colonial nests from wax, for the large size of their colonies, and for their surplus production and storage of honey.</p>
-		</center></main>
+		They are known for construction of perennial, colonial nests from wax, for the large size of their colonies, and for their surplus production and storage of honey.</p>
+	</main>
 
 </body>
 </html>
