--- a/simple.html
+++ b/simple.html
@@ -15,10 +15,9 @@
 	</header>
 	<!-- main element -->
 	<main>
+		<h2>hb.</h2>
 		
-		<p>A honey bee (also spelled honeybee) is a eusocial flying insect within the genus Apis of the bee clade. 
-				<br> 
-		They are known for construction of perennial, colonial nests from wax, for the large size of their colonies, and for their surplus production and storage of honey.</p>
+		<p>A honey bee (also spelled honeybee) is a eusocial flying insect within the genus Apis of the bee clade. They are known for construction of perennial, colonial nests from wax, for the large size of their colonies, and for their surplus production and storage of honey.</p>
 	</main>
 
 </body>
